# mini_project-Web_Scraping

./: .env  .env.dev  .env.example  .gitignore  .gitmessage.txt  README.md  app.db.base.TORTOISE_CONFIG  pyproject.toml
app/: main.py
app/api/v1/: auth.py  question.py  quote.py
app/core/: auth.py  config.py  security.py
app/db/: base.py
app/db/migrations/models/: 0_20260121114405_init.py
app/models/: __init__.py  auth.py  diary.py  question.py  quote.py  user.py
app/repositories/: question_repo.py  quote_repo.py  user_repo.py
app/schemas/: auth.py  diary.py  question.py  quote.py
app/scraping/: question_scraper.py  quote_scraper.py
app/services/: auth_service.py  question_scraping_service.py  question_service.py  quote_scraping_service.py  quote_service.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: main.js
migrations/models/: 0_20260121142520_init.py  0_20260122104437_init.py  1_20260121115914_None.py  2_20260121121602_update.py  3_20260121122005_update.py
tests/: test_db_connection.py
