[project]
name = "fastapi-mini-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
prod = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]